syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message NumberRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberResponse {
  int32 value = 1;
}

message Empty {}

service NumberService {
  rpc generateNumberStream(NumberRequest) returns (stream NumberResponse) {}
}